Implement DataConditionSelector in test app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,10 @@
             android:id="@+id/bt_simple_spacing_divided"
             android:text="simple spacing with divided"/>
 
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bt_conditional_decoration"
+            android:text="Conditional decoration"/>
+
 </LinearLayout>
